# Computer-Science-UMinho

./: LICENSE  README.md
Licenciatura (BSc)/2º Ano/POO/Empregados/: estado.tabemp  log.txt
Licenciatura (BSc)/2º Ano/POO/Ficha 06/: Mail.ctxt
Licenciatura (BSc)/2º Ano/POO/Ficha 8/: Multimédia.java  ficha8.ctxt  ficha8.java  package.bluej
Licenciatura (BSc)/2º Ano/POO/Guiao 6/: Cache.ctxt  Cache.java  Parque.ctxt  Teste.ctxt  package.bluej
Licenciatura (BSc)/2º Ano/POO/Guiao5/: FichaPais.ctxt  Playlist.java  Teste.java  Testes.java
Licenciatura (BSc)/2º Ano/POO/Guião 1/: OlaMundo1.java  Random2.java  exe10.ctxt  exe10.java  exe11.java  exe14.ctxt  exe15.java  exe16.java  exe17.java  exe2.java  exe5.ctxt  exe6.ctxt  exe6.java  exe8.ctxt  exe9.ctxt
Licenciatura (BSc)/2º Ano/POO/Guião 2/: exe2.ctxt  exe2.java  exe3.ctxt  exe4.java  exe5.java  exe7.ctxt  exe8.ctxt  exe8.java  package.bluej
Licenciatura (BSc)/2º Ano/POO/Guião 3/: CartaoCliente.ctxt  Complexo.ctxt  ContaPrazo.java  CronometroDS.java  Pixel.ctxt  Pixel.java  Produto.ctxt  Produto.java  Teste.ctxt  Teste.java  Veiculo.ctxt  Veiculo.java  package.bluej
Licenciatura (BSc)/2º Ano/POO/Guião 4/: Ecran.ctxt  LLStrings.java  LLStrings_Array.ctxt  Testes.ctxt  Testes.java
Licenciatura (BSc)/2º Ano/POO/Guião 7/: Discount.ctxt  HoteisInc.java  HoteisIncList.java  Hotel.ctxt  HotelPremium.ctxt  HotelPremium.java  package.bluej
Licenciatura (BSc)/2º Ano/POO/Teste2012/: Agenda.java  Tarefa.java
Licenciatura (BSc)/3º Ano/2º Semestre/Computação gráfica/Guiões TP/Projeto 5/: CMakeLists.txt  mainteste.cpp
(+2090 files in other folders)
